platform/policy/kyverno/tests/probes-distinct-liveness-readiness/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno-probes-distinct
  labels:
    infra.k8/tier: staging
